Changes in @NEW@:
  o Bug Fixes:
    * gzip files that are corrupt in the first 4KB of compressed data
      no longer cause all policies that check for file type using
      conary's "magic" module to trace back. (CNY-3377)

Changes in 2.1.11:
  o New Features:
    * The recreatedb script is now capable of populating the Conary
      database with packages in the RPM database that are found in
      the Conary repositories in the installLabelPath. (CNY-3373)

  o Internal Changes
    * Added ability to commit changesets without executing capsule
      implementations. This allows us to build a conarydb which reflects
      the current state of a system without reinstalling packages through
      the capsule handler.

  o Bug Fixes:
    * The Java package policies for computing provides and requires are
      now more efficient. (CNY-3372)

Changes in 2.1.10:
  o New Features:
    * The "conary migrate" command no longer requires interactive
      mode, and now defaults to yes rather than no. (CNY-3361)
    * Added --diff option to verify and showchangeset commands to display
      output as a git-formatted diff
    * Added --new-files option to verify to include files which were added
      to the system outside of conary package management. The
      verifyDirsNoNewFiles configuration option was added to pare down the
      tree conary looks through for new files.
     * Added exceptions and exceptDeps options to RPMRequires

  o Internal Changes
    * Optimized StreamCollection diff and __eq__ operations to use frozen
      data if available
    * Merged internals of localcs/verify implementation into new classes
    * Flavor objects can now be used with the stdlib "pickle" module.

  o Bug Fixes:
    * SSL XMLRPC connections will now retry before raising an exception
      (CNY-3369)
    * Java requirements for classes depending on other classes for which
      provides have been dropped no longer propagate as trove or file
      requirements. (CNY-3362)